--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
           </h2>
           <h2 class="menu"><span style="color: white;">HI, I'M NAPAT<br>
               こんにちは、ナパットです。</span> </h2>
-          <a href="#about"><button type="button" class="btn btn-light">About me</button></a>
+          <a href="#about"><button type="button" class="btn btn-light button">About
+              me</button></a>
           <h2> </h2>
         </div>
         <div>
@@ -107,19 +108,18 @@
       </div>
       <div class="row mx-auto p-2" style="width: 650px; text-align: center;">
         <p>
-          ดิฉันอยากจะทำงานในบริษัทที่ได้ใช้ความสามารถทางด้านภาษาญี่ปุ่นที่ฉันมี
-          ให้เกิดประโยชน์ได้อย่างเต็มที่ที่สุด
-          และคาดหวังว่าการได้เข้าทำงานกับบริษัทของคุณ
-          จะทำให้ดิฉันได้เรียนรู้เกี่ยวกับทักษะและได้รับประสบการณ์ในการทำงานด้านการแปล
-          หนังสือจากบุคลากรมากประสบการณ์ในองค์กร
+          ดิฉันอยากจะทำงานในบริษัทที่ได้ใช้ความสามารถทางด้านภาษาญี่ปุ่นที่ฉันมีให้เกิด
+          ประโยชน์ได้อย่างเต็มที่ที่สุดและคาดหวังว่าการได้เข้าทำงานกับบริษัท
+          ขอ'คุณจะทำให้ดิฉันได้เรียนรู้เกี่ยวกับทักษะและได้รับประสบการณ์ในการทำ
+          งานด้านการแปลหนังสือจากบุคลากรมากประสบการณ์ในองค์กร
           และนำความรู้เหล่านั้นมาประยุกต์ใช้ในการทำงานแปลที่มีคุณภาพมากที่สุดออกมาเพื่อให้
           ผู้อ่านสามารถอ่านได้อย่างเพลิดเพลิน </p>
       </div>
       <br>
       <div class="row">
-        <div style="text-align: center;"> <img src="Images/102B2C47-F047-4A99-A111-71ADC4A01D37.png"
+        <div style="text-align: center;"> <img src="images/102B2C47-F047-4A99-A111-71ADC4A01D37.png"
 
-            class="img-fluid" alt="book" style="width: 302px; height: 200px;"></div>
+            class="img-fluid" alt="book" style="width: 376px; height: 249px;"></div>
       </div>
       <br>
       <br>
@@ -137,13 +137,13 @@
       <div class="row info mt-0 px-5 pt-1 " style="text-align: center;">
         <div class="col-4"><a id="PERSONAL INFORMATION"> </a><a href="#personal"><img
 
-              src="Images/DE24A029-4030-4F57-91DC-E3AE488CD130.png" class="img-fluid"
+              src="images/DE24A029-4030-4F57-91DC-E3AE488CD130.png" class="img-fluid"
 
               alt="personal"></a></div>
-        <div class="col-4"><a href="#educational"><img src="Images/DE24A029-4030-4F57-91DC-E3AE488CD130%281%29.png"
+        <div class="col-4"><a href="#educational"><img src="images/DE24A029-4030-4F57-91DC-E3AE488CD130%281%29.png"
 
               class="img-fluid" alt="educational"></a></div>
-        <div class="col-4"><a href="#skills"><img src="Images/DE24A029-4030-4F57-91DC-E3AE488CD130%282%29.png"
+        <div class="col-4"><a href="#skills"><img src="images/DE24A029-4030-4F57-91DC-E3AE488CD130%282%29.png"
 
               class="img-fluid" alt="skills"></a></div>
       </div>
@@ -151,7 +151,7 @@
       <br>
       <br>
       <div class="row mt-5" style="text-align: center;"> <a id="personal">
-          <p><img src="Images/87590B14-8FF7-45AA-8951-2AE8CF24456B.png" class="rounded-circle"
+          <p><img src="images/87590B14-8FF7-45AA-8951-2AE8CF24456B.png" class="rounded-circle"
 
               alt="imgme" style="width: 188px; height: 181px;"></p>
         </a> </div>
@@ -177,7 +177,7 @@
       <div class="row m-0 pt-5 info" style="text-align: center;">
         <h1> EDUCATION HISTORY </h1>
       </div>
-      <div class="row m-0 pb-5 pt-2 px-5 info">
+      <div class="row m-0 pb-5 pt-2 px-5 info" style="text-align: center;">
         <table class="table table-bordered" style="color: #5b5247;">
           <thead>
             <tr style="text-align: center;">
@@ -210,10 +210,11 @@
       <div class="row">
         <div id="carouselExample" class="carousel slide">
           <div class="carousel-inner">
-            <div class="carousel-item active"> <a id="skills"><img src="Images/skillsjapannew.jpg"
+            <div class="carousel-item active"> <a id="skills"><img
 
-                  class="d-block w-100" alt="skills"></a> </div>
-            <div class="carousel-item"> <img src="Images/skillsothernew.jpg" class="d-block w-100"
+                  src="images/skillsjapannew.jpg" class="d-block w-100" alt="skills"></a>
+            </div>
+            <div class="carousel-item"> <img src="images/skillsothernew.jpg" class="d-block w-100"
 
                 alt="skills2"> </div>
           </div>
@@ -235,15 +236,13 @@
       <div class="row py-5 ps-5 footer">
         <div class="col-1"><a href="https://youtube.com/@bbyproduction7582?si=kw6jf6k4a2b3ab2a"
 
-            target="_blank"><img src="Images/youtube.jpg" class="circle" alt="youtube"></a></div>
-        <div class="col-1 mx-3"><a href="https://www.facebook.com/numnumzung"
+            target="_blank"><img src="images/youtube.jpg" class="circle" alt="youtube"></a></div>
+        <div class="col-1 mx-3"><a href="https://www.facebook.com/numnumzung" target="_blank"><img
 
-            target="_blank"><img src="Images/facebook.jpg" class="circle"
-
-              alt="facebook"></a></div>
+              src="images/facebook.jpg" class="circle" alt="facebook"></a></div>
         <div class="col-1"><a href="https://instagram.com/naninunenorrr?igshid=YTQwZjQ0NmI0OA=="
 
-            target="_blank"><img src="Images/instagram.jpg" class="circle" alt="instagram"></a></div>
+            target="_blank"><img src="images/instagram.jpg" class="circle" alt="instagram"></a></div>
         <br>
         <div class="col ps-4 word">
           <h4> TEL. 095-831-0852</h4>
