--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item"> <a class="nav-link active" aria-current="page"
-                    href="#">Home</a> </li>
+                    href="#back">Home</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#about">About</a>
                 </li>
                 <li class="nav-item"> <a class="nav-link" href="#info">Info</a>
@@ -57,9 +57,10 @@
           <br>
           <h3 class="menu pt-5"><span style="color: white;">HI, I'M NAPAT<br>
               こんにちは、ナパットです。</span> </h3>
-          <a href="#about"><button type="button" class="btn btn-light button mb-5">About
+          <h1> <a href="#about"><button type="button" class="btn btn-light button mb-5">About
 
-              me</button></a> </div>
+                me</button></a> </h1>
+        </div>
       </div>
       <div class="row m-5 plswork"> . </div>
       <div class="row m-5 plswork"> . </div>
@@ -171,8 +172,9 @@
         <br>
         <br>
         <br>
-        <div class="row my-3" style="text-align: center;"> <a href="#back"><button
-              type="button" class="btn btn-light button mb-5">Back to top</button></a>
+        <div class="row my-3" style="text-align: center;">
+          <h1> <a href="#back"><button type="button" class="btn btn-light button mb-5">Back
+                to top</button></a> </h1>
         </div>
         <div class="row pt-4 ps-5 footer" style="text-align: center;">
           <div class="col md-4 xs-1" style="text-align: right;"><a href="https://youtube.com/@bbyproduction7582?si=kw6jf6k4a2b3ab2a"
