--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div class="row font">
-      <div class="fixed-top"> <a href="#about" id="back"> </a>
+      <div class="fixed-top">
         <nav class="navbar navbar-expand-lg " style="background-color: #F1EFEB;"><a
             href="#about" id="back"> </a>
           <div class="container-fluid"><a href="#about" id="back"> <b> </b></a><b><a
@@ -47,7 +47,8 @@
           <br>
           <br>
         </div>
-        <div class="col-8" style="text-align: center;"><br>
+        <div class="col-8" style="text-align: center;"> <a href="#about" id="back">
+          </a><br>
         </div>
         <div class="col-8" style="text-align: center;"><br>
         </div>
