--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item"> <a class="nav-link active" aria-current="page"
-                    href="#back">Home</a> </li>
+                    href="#back1">Home</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#about">About</a>
                 </li>
                 <li class="nav-item"> <a class="nav-link" href="#info">Info</a>
@@ -48,7 +48,7 @@
           <br>
         </div>
         <div class="col-8" style="text-align: center;"> <a href="#about" id="back">
-          </a><br>
+          </a><a name="back1" id="back1"></a><br>
         </div>
         <div class="col-8" style="text-align: center;"><br>
         </div>
@@ -87,7 +87,7 @@
         </div>
         <div class="row m-5 plswork"> . </div>
         <div class="row pt-5 pb-4 info" style="text-align: center;">
-          <h1>MY INFORMATION</h1>
+          <h1>MY INFOR<a name="info" id="info"></a>MATION</h1>
         </div>
         <div class="row info mt-0 md-5 px-5 pt-5 pb-5" style="text-align: center;">
           <div class="col-md-4 my-1"><a id="PERSONAL INFORMATION"> </a><a href="#personal"><img
@@ -174,7 +174,7 @@
         <br>
         <br>
         <div class="row my-3" style="text-align: center;">
-          <h1> <a href="#back"><button type="button" class="btn btn-light button mb-5">Back
+          <h1> <a href="#back1"><button type="button" class="btn btn-light button mb-5">Back
                 to top</button></a> </h1>
         </div>
         <div class="row pt-4 ps-5 footer" style="text-align: center;">
