--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MyResume</title>
+    <title>Resume for a Japanese book translation[นักแปลหนังสือภาษาญี่ปุ่น]</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous">
@@ -14,6 +14,8 @@
     <link type="text/css" rel="stylesheet" href="css/lightbox.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&amp;display=swap"
       rel="stylesheet">
+    <meta name="description" content="ฉันต้องการสมัครงานในตำแหน่งนักแปลหนังสือภาษาญี่ปุ่น เว็บไซต์นี้จะประกอบไปด้วยข้อมูลต่างๆเกี่ยวกับข้อมูลส่วนตัวของฉันให้ท่านได้รู้จักฉันมากขึ้นรวมถึงความสารถและทักษะทางภาษาญี่ปุ่นของฉัน เพื่อเป็นแนวทางให้ทุกท่านพิจารณาและตัดสินใจในการรับฉันเข้าไปเป็นนักแปลหนังสือภาษาญี่ปุ่นในองค์กรของคุณ">
+    <meta name="keywords" content="นักแปลหนังสือภาษาญี่ปุ่น, สมัครงาน, Japanese book translation, book translator, นักแปลหนังสือ, ภาษาญี่ปุ่น">
   </head>
   <body>
     <div class="row font">
@@ -28,7 +30,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item"> <a class="nav-link active" aria-current="page"
-                    href="#back1">Home</a> </li>
+                    href="#">Home</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#about">About</a>
                 </li>
                 <li class="nav-item"> <a class="nav-link" href="#info">Info</a>
@@ -57,8 +59,11 @@
         <div class="col-8" style="text-align: center;"><br>
           <br>
           <h3 class="menu pt-5"><span style="color: white;">HI, I'M NAPAT<br>
-              こんにちは、ナパットです。</span> </h3>
-          <h1> <a href="#about"><button type="button" class="btn btn-light button mb-5">About
+            </span></h3>
+          <h1 class="cute"><span style="color: white;"> I want to be a book
+              translator</span></h1>
+          <h5><span style="color: white;"> </span> </h5>
+          <h1 class="head"> <a href="#about"><button type="button" class="btn btn-light button mb-5">About
 
                 me</button></a> </h1>
         </div>
@@ -69,17 +74,20 @@
       <div class="row mt-5 pt-5 ">
         <div class="col-md-3"> </div>
         <div class="col-md-6 px-4">
-          <h1 style="text-align: center;"><a id="about">ABOUT ME</a></h1>
+          <h1 class="head" style="text-align: center;"><a id="about">ABOUT ME</a></h1>
           <br>
+          <h1 class="topic" style="text-align: center;"> ฉันอยากเป็น
+            "นักแปลหนังสือภาษาญี่ปุ่น"</h1>
           <p style="text-align: center;">
-            ดิฉันอยากจะทำงานในบริษัทที่ได้ใช้ความสามารถทางด้านภาษาญี่ปุ่นที่ฉันมีให้เกิด
-            ประโยชน์ได้อย่างเต็มที่ที่สุดและคาดหวังว่าการได้เข้าทำงาน
-            กับบริษัทของคุณจะทำให้ดิฉันได้เรียนรู้เกี่ยวกับทักษะและได้รับ
-            ประสบการณ์ในการทำ
-            งานด้านการแปลหนังสือจากบุคลากรมากประสบการณ์ในองค์กรและนำความรู้เหล่า
-            นั้นมา
-            ประยุกต์ใช้ในการทำงานแปลที่มีคุณภาพมากที่สุดออกมาเพื่อให้ผู้อ่านสามารถอ่านได้
-            อย่างเพลิดเพลิน </p>
+            ดิฉันอยากทำงานในบริษัทที่ได้ใช้ความสามารถทางด้านภาษาญี่ปุ่นที่ฉันมีให้เกิด
+            ประโยชน์ได้อย่างเต็มที่ที่สุด
+            การได้เป็นนักแปลหนังสือที่ต้องอาศัยทั้งความรู้และความเข้าใจทางด้านภาษาญี่ปุ่น
+            เป็นอย่างมากจึงเป็นอาชีพที่ตอบโจทย์ที่สุด
+            และดิฉันก็คาดหวังว่าการได้เข้าทำงานกับบริษัทของคุณจะทำให้ดิฉันได้เรียนรู้เกี่ยว
+            กับทักษะและได้รับประสบการณ์ในการทำงานด้านการแปลหนังสือจากบุคลากรมาก
+            ประสบการณ์ในองค์กรและนำความรู้เหล่า
+            นั้นมาประยุกต์ใช้ในการทำงานแปลที่มีคุณภาพมากที่สุดออกมาเพื่อให้ผู้อ่านสามารถอ่าน
+            ได้ อย่างเพลิดเพลิน </p>
         </div>
         <div class="row my-5">
           <div style="text-align: center;"> <img src="images/102B2C47-F047-4A99-A111-71ADC4A01D37.png"
@@ -87,7 +95,7 @@
         </div>
         <div class="row m-5 plswork"> . </div>
         <div class="row pt-5 pb-4 info" style="text-align: center;">
-          <h1>MY INFOR<a name="info" id="info"></a>MATION</h1>
+          <h1 class="head">MY INFOR<a name="info" id="info"></a>MATION</h1>
         </div>
         <div class="row info mt-0 md-5 px-5 pt-5 pb-5" style="text-align: center;">
           <div class="col-md-4 my-1"><a id="PERSONAL INFORMATION"> </a><a href="#personal"><img
@@ -105,7 +113,7 @@
                 alt="imgme" style="width: 188px; height: 181px;"></p>
           </a> </div>
         <div class="row" style="text-align: center;">
-          <h1>PERSONAL INFORMATION</h1>
+          <h1 class="head">PERSONAL INFORMATION</h1>
         </div>
         <br>
         <div class="row mb-3" style="text-align: center;">
@@ -123,7 +131,7 @@
         </div>
         <a id="educational"> </a><br>
         <div class="row m-0 pt-5 info" style="text-align: center;">
-          <h1> EDUCATION HISTORY </h1>
+          <h1 class="head"> EDUCATION HISTORY </h1>
         </div>
         <div class="row m-0 pb-5 pt-2 px-5 info" style="text-align: center;">
           <table class="table table-bordered" style="color: #5b5247;">
@@ -147,11 +155,47 @@
               </tr>
               <tr>
                 <td>ระดับประถมศึกษา</td>
-                <td>โรงเรียนอนุบาลปทุมธานี</td>
+                <td style="text-align: center;">โรงเรียนอนุบาลปทุมธานี</td>
                 <td>2552-2557</td>
               </tr>
             </tbody>
           </table>
+          <div class="mt-2 head">
+            <!-- Button trigger modal --><button type="button" class="btn btn-light"
+              data-bs-toggle="modal" data-bs-target="#exampleModal">
+              ใบประกาศนียบัตรและผลงาน </button><!-- Modal --></div>
+          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">
+                    ใบประกาศนียบัตรและผลงาน</h1>
+                  <br>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal"
+                    aria-label="Close"></button> </div>
+                <div class="modal-body">
+                  <div id="carouselExampleControlsNoTouching" class="carousel slide"
+                    data-bs-touch="false">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active"> <img src="images/2.jpg"
+                          class="img-fluid" alt="ผลสอบวัดระดับภาษา"> </div>
+                      <div class="carousel-item"> <img src="images/1.jpg" class="img-fluid"
+                          alt="ผลงาน"> </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching"
+                      data-bs-slide="prev"> <span class="carousel-control-prev-icon"
+                        aria-hidden="true"></span> <span class="visually-hidden">Previous</span>
+                    </button> <button class="carousel-control-next" type="button"
+                      data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span> </button> </div>
+                </div>
+                <div class="modal-footer"> <button type="button" class="btn btn-secondary"
+                    data-bs-dismiss="modal">Close</button> </div>
+              </div>
+            </div>
+          </div>
         </div>
         <br>
         <br>
@@ -173,8 +217,8 @@
         <br>
         <br>
         <br>
-        <div class="row my-3" style="text-align: center;">
-          <h1> <a href="#back1"><button type="button" class="btn btn-light button mb-5">Back
+        <div class="row my-3 head" style="text-align: center;">
+          <h1> <a href="#"><button type="button" class="btn btn-light button mb-5">Back
                 to top</button></a> </h1>
         </div>
         <div class="row pt-4 ps-5 footer" style="text-align: center;">
